--- a/style.css
+++ b/style.css
@@ -1,76 +1,80 @@
-*
-{
+* {
     margin: 0;
     padding: 0;
-}
-h1
+  
+  }
+  
+  h1
 {
     margin-top: 6vmin;
 }
-body{
+  body {
     background-color: #231942;
     text-align: center;
-}
-.container
-{
+  }
+  
+  .container{
     height: 70vh;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-.game
-{
-    height: 60vmin;
+  }
+  
+  .game{
+    height: 60vh;
     width: 60vmin;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     gap: 1.5vmin;
-   
+  }
+  
+  .box{
+    height: 18vh;
+    width: 18vh;
+    border-radius: 1.5rem;
+    border: none;
+    font-size: 8vmin;
+    color: #000000;
+    background-color: #5e548e;
+    color: #e0b1cb;
+  }
+  
+  #reset-btn {
+    padding: 1rem;
+    font-size: 1.25rem;
+    background-color: #5e548e;
+    color: #e0b1cb;
+    border-radius: 1rem;
+    border: none;
+  }
+  
+  #new-btn {
+    padding: 1rem;
+    font-size: 1.25rem;
+    background-color: #5e548e;
+    color: #e0b1cb;
+    border-radius: 1rem;
+    border: none;
     
-}
-.box
-{
-    background-color: #5e548e;
-    color: #e0b1cb;
-    height: 18vmin;
-    width: 18vmin;
-    border-radius: 1rem;
-    border: none;
-    box-shadow: 0 0 1rem rgba(0,0,0,0.1);
-    font-size: 8vmin;
-
-}
-#reset-btn
-{
-    background-color: #5e548e;
-    color: #e0b1cb;
-    padding: 1rem;
-    border-radius: 1rem;
-    border: none;
-}
-#new-btn
-{
-    background-color: #5e548e;
-    color: #e0b1cb;
-    padding: 1rem;
-    border-radius: 1rem;
-    border: none;
-    margin-top: 1rem;
-}
-#msg
-{
-    padding-top: 10vmin;
+  }
+  
+  #msg {
     color: #e0b1cb;
     font-size: 8vmin;
-}
-#msg-container
-{
-    height: 30vmin;
-    gap:2rem;
-}
-.hide
-{
+    font-weight: 800;
+  }
+  
+  .msg-container {
+    height: 100vmin;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 4rem;
+  }
+  
+  .hide {
     display: none;
-}
+  }
